# local-whisper

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md
.github/workflows/: release-tauri.yml
apps/desktop/: package.json  pnpm-lock.yaml  tailwind.config.js
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  mic.rs  screen_recording.rs  system_audio.rs  whisper.rs
apps/desktop/src-tauri/src/audio/: constants.rs  mod.rs  processing.rs  state.rs  utils.rs
apps/desktop/src-tauri/src/transcription/: api_client.rs  mod.rs  webrtc_client.rs  websocket_client.rs  worker.rs
apps/desktop/src-tauri/swift/: ScreenRecorder.swift  SystemAudioCapture.swift
apps/desktop/src/components/: TypingDots.tsx
apps/desktop/src/locales/: en.ts  index.ts  ja.ts  types.ts
crates/asr-core/: Cargo.toml  build.rs
crates/asr-core/src/: lib.rs  silero_vad.rs
