[package]
name = "local-whisper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "local_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
asr-core = { path = "../../../crates/asr-core" }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
cpal = "0.15"
parking_lot = "0.12"
chrono = "0.4"
reqwest = { version = "0.11", features = ["stream"] }
voice_activity_detector = "0.2.1"
hound = "3.5"
